Update media query

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <div class="transparent z-1 w-100 vh-100 flex justify-center items-center fixed">
-    <img class="w-50-ns w-80 flip-vertical-right" src="logo.svg" alt="">
+    <img class="w-50-l w-100 flip-vertical-right" src="logo.svg" alt="">
   </div>
 
   <div id="fullpage" class="container fr">
