--- a/index.html
+++ b/index.html
@@ -5,40 +5,40 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Zin Abidin</title>
-  <link rel="stylesheet" type="text/css" href="/assets/main.css" charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="/main.css" charset="utf-8" />
   <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header class="z-max fixed h-100-ns h10 w-auto-ns w-100 bg-white br-ns bb">
     <nav class="flex flex-column-ns">
-      <a class="link bb-ns br black hover-bg-light-silver vh-third-ns w-100-ns w-third flex items-center justify-center" href="/"><img class="pa2 dib-ns dn" src="assets/nav/issue.png"> <span class="dn-ns pa1">Issue</span> </a>
-      <a class="link bb-ns br black hover-bg-light-silver vh-third-ns w-100-ns w-third flex items-center justify-center" href="/about.html"><img class="pa2 dib-ns dn" src="assets/nav/tentang.png"> <span class="dn-ns pa1">Tentang</span> </a>
-      <a class="link bb-ns br black hover-bg-light-silver vh-third-ns w-100-ns w-third flex items-center justify-center" href="contact.html"><img class="pa2 dib-ns dn" src="assets/nav/kontak.png"> <span class="dn-ns pa1">Kontak</span> </a>
+      <a class="link bb-ns br black hover-bg-light-silver vh-third-ns w-100-ns w-third flex items-center justify-center" href="/"><img class="pa2 dib-ns dn" src="issue.png"> <span class="dn-ns pa1">Issue</span> </a>
+      <a class="link bb-ns br black hover-bg-light-silver vh-third-ns w-100-ns w-third flex items-center justify-center" href="/about.html"><img class="pa2 dib-ns dn" src="tentang.png"> <span class="dn-ns pa1">Tentang</span> </a>
+      <a class="link bb-ns br black hover-bg-light-silver vh-third-ns w-100-ns w-third flex items-center justify-center" href="contact.html"><img class="pa2 dib-ns dn" src="kontak.png"> <span class="dn-ns pa1">Kontak</span> </a>
     </nav>
   </header>
 
   <div class="transparent z-1 vh-100 absolute right-0 flex justify-center items-center">
-    <img class="w-60-l w-90 flip-vertical-right" src="assets/logo.svg" alt="">
+    <img class="w-60-l w-90 flip-vertical-right" src="logo.svg" alt="">
   </div>
 
   <div id="fullpage">
 
-    <div class="section w-100 vh-100 cover flex items-end justify-end" style="background:url(assets/img/ichi.png) center">
+    <div class="section w-100 vh-100 cover flex items-end justify-end" style="background:url(ichi.png) center">
       <a href="issue-01.html" class="link flex flex-column white underline-hover tr f-headline-ns f2 pa4-ns pa2 w-70-ns w100">
         <span>Issue #01</span>
         <span>A Very Bad Quack Might Jinx The Zippy Fowls</span>
       </a>
     </div>
 
-    <div class="section w-100 vh-100 cover flex items-end justify-end" style="background:url(assets/img/ichi2.png) center">
+    <div class="section w-100 vh-100 cover flex items-end justify-end" style="background:url(ichi2.png) center">
       <a href="#" class="link flex flex-column white underline-hover tr f-headline-ns f2 pa4-ns pa2 w-70-ns w100">
         <span>Issue #02</span>
         <span>Jinxed Wizards Pluck Ivy From The Big Quilt</span>
       </a>
     </div>
 
-    <div class="section w-100 vh-100 cover flex items-end justify-end" style="background:url(assets/img/Untitled.png) center">
+    <div class="section w-100 vh-100 cover flex items-end justify-end" style="background:url(Untitled.png) center">
       <a href="#" class="link flex flex-column white underline-hover tr f-headline-ns f2 pa4-ns pa2 w-70-ns w100">
         <span>Issue #03</span>
         <span>The Quick Brown Fox Jumps Over The Lazy Dog</span>
